Fix layout issue when no sidebar

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -118,7 +118,7 @@ adjusting for padding. This matches what the blog and our custom page layouts al
   }
 
   [class^='docsWrapper'] {
-    max-width: var(--ifm-container-width);
+    width: min(var(--ifm-container-width), 100%);
     margin-left: auto;
     margin-right: auto;
   }
@@ -133,7 +133,7 @@ At the wider breakpoint for the Infima container, re-declare the widths.
   }
 
   [class^='docsWrapper'] {
-    max-width: var(--ifm-container-width-xl);
+    width: min(var(--ifm-container-width-xl), 100%);
   }
 }
 
